@@ -5,10 +5,13 @@ defmodule Chunky.Sequence.OEIS.Core do
   ## Available Sequences
 
    - [A000041 - Partition Numbers](https://oeis.org/A000041) - `:a000041` - `create_sequence_a000041/1`
+   - [A000593 - Sum of Odd Divisors of N](https://oeis.org/A000593) - `:a000593` - `create_sequence_a000593/1`
 
   """
-  import Chunky.Sequence, only: [sequence_for_list: 1]
-
+  import Chunky.Sequence, only: [sequence_for_list: 1, sequence_for_function: 1]
+  
+  require Integer
+  
   # raw data for the A000041 - Partitions of N
   @data_a000041 [
     1,
@@ -297,5 +300,28 @@ defmodule Chunky.Sequence.OEIS.Core do
        ]
   def create_sequence_a000041(_opts) do
     sequence_for_list(@data_a000041)
+  end
+  
+  @doc """
+  
+  ## Example
+  
+      iex> Sequence.create(Sequence.OEIS.Core, :a000593) |> Sequence.take!(10)
+      [1, 1, 4, 1, 6, 4, 8, 1, 13, 6]
+  
+  """
+  @doc sequence: "OEIS A000593 - Sum of Odd Divisors of N [1, 1, 4, 1, 6, ...]", references: [{:oeis, :a000593, "http://oeis.org/A000593"}]
+  def create_sequence_a000593(_opts) do
+      sequence_for_function(&Chunky.Sequence.OEIS.Core.seq_a000593/1)
+  end
+  
+  def seq_a000593(idx) do
+      
+      # N is idx +1, as this is an offset sequence (1, 3)
+      idx = idx + 1
+      Chunky.Math.prime_factors(idx) ++ [idx]
+      |> Enum.filter(&Integer.is_odd/1)
+      |> Enum.uniq()
+      |> Enum.sum()
   end
 end
