@@ -13,6 +13,16 @@
 
 # CHANGELOG
 
+## v0.*.*
+
+### Changes/Refactorizations
+
+### Enhancements
+
+### New Sequences
+
+ - A000593 - Sum of Odd Divisors of N
+ 
 ## v0.7.0
 
 ### Enhancements
